export default class SnapshotException extends Error {
}