import AmiException from "./AmiException";
export default class AmiAlreadyExistsException extends AmiException {
}