const AmiException = require("./AmiException");
module.exports = class AmiCreationException extends AmiException {
}