const AmiException = require('./AmiException');
module.exports = class AmiDeletionException extends AmiException {
}