export default class AmiException extends Error {
}