const DlmException = require('./DlmException');
module.exports = class DlmAlreadyExistException extends DlmException {
}