const DlmException = require("./DlmException");
module.exports = class DlmDeleteException extends DlmException {
}