module.exports = class DlmException extends Error {
}