const DlmException = require("./DlmException");
module.exports = class DlmNotFoundException extends DlmException {
}