const SnapshotException = require("./SnapshotException");
module.exports = class SnapshotVolumeNotFoundException extends SnapshotException {
}

